--- a/index.html
+++ b/index.html
@@ -21,5 +21,31 @@
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <!-- NavBar -->
+    <nav id="bar">
+      <div class="navbar_logo">
+        <i class="fab f-diaspora"></i>
+        <a href="#">CHANi</a>
+      </div>
+      <ul class="nabar_menu">
+        <li class="navbar_menu_item">Home</li>
+        <li class="navbar_menu_item">About</li>
+        <li class="navbar_menu_item">Skills</li>
+        <li class="navbar_menu_item">My Work</li>
+        <li class="navbar_menu_item">Testimoials</li>
+        <li class="navbar_menu_item">Contact</li>
+      </ul>
+    </nav>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <aection id="skills"></aection>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Testimoials -->
+    <section id="testimomilas"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
+  </body>
 </html>
