--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- NavBar -->
     <nav id="bar">
       <div class="navbar_logo">
-        <i class="fab f-diaspora"></i>
+        <i class="fab f-chan"></i>
         <a href="#">CHANi</a>
       </div>
       <ul class="nabar_menu">
@@ -37,6 +37,22 @@
         <li class="navbar_menu_item">Contact</li>
       </ul>
     </nav>
+    <!-- Home -->
+    <section id="fome">
+      <img
+        src="imgs/profile.png"
+        alt="Chan's profile photo"
+        class="home_avatar"
+      />
+      <h1 class="home_title">
+        Hello,<br />
+        I'm dev
+      </h1>
+      <h2 class="home_descripntion">
+        무역 학과에서 비전공 풀스택 개발자를 위한 여정
+      </h2>
+      <button class="home_contact">Contact Me</button>
+    </section>
     <!-- About -->
     <section id="about"></section>
     <!-- Skills -->
