--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- NavBar -->
     <nav id="bar">
       <div class="navbar_logo">
-        <i class="fab f-chan"></i>
+        <img src="imgs/favicon.png" alt="icon" />
         <a href="#">CHANi</a>
       </div>
       <ul class="nabar_menu">
@@ -38,7 +38,7 @@
       </ul>
     </nav>
     <!-- Home -->
-    <section id="fome">
+    <section id="home">
       <img
         src="imgs/profile.png"
         alt="Chan's profile photo"
@@ -54,7 +54,55 @@
       <button class="home_contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about"></section>
+    <section id="about">
+      <h1>About Me</h1>
+      <p>무역학과를 졸업하고 비전공 풀스택 개발자가 되기 위해 노력중입니다.</p>
+      <div class="about_majors">
+        <div class="major">
+          <div class="major_icon">
+            <i class="fa-brands fa-html5"></i>
+          </div>
+          <div class="major_title">Front-end</div>
+          <div class="major_deccription">HTML, CSS, JavaScript</div>
+        </div>
+        <div class="major">
+          <div class="major_icon">
+            <i class="fa-solid fa-database"></i>
+          </div>
+          <div class="major_title">Front-end</div>
+          <div class="major_deccription">
+            servlet, jsp, spring, mybatis, Mysql
+          </div>
+        </div>
+        <div class="major">
+          <div class="major_icon">
+            <i class="fa-brands fa-html5"></i>
+          </div>
+          <div class="major_title">Front-end</div>
+          <div class="major_deccription">HTML, CSS, JavaScript</div>
+        </div>
+      </div>
+      <div class="about__jobs">
+        <div class="jobs">
+          <img
+            src="imgs/jobs/multicampus.png"
+            alt="multicampus"
+            class="job__logo"
+          />
+          <p class="job__name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
+          <p class="job__period">2021.12.20 ~ 2022.06.05</p>
+        </div>
+        <div class="jobs">
+          <img
+            src="imgs/jobs/multicampus.png"
+            alt="multicampus"
+            class="job__logo"
+          />
+          <p class="job__name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
+          <p class="job__period">2021.12.20 ~ 2022.06.05</p>
+        </div>
+      </div>
+    </section>
     <!-- Skills -->
     <aection id="skills"></aection>
     <!-- Work -->
