--- a/index.html
+++ b/index.html
@@ -104,7 +104,105 @@
       </div>
     </section>
     <!-- Skills -->
-    <aection id="skills"></aection>
+    <section id="skills">
+      <h1>Skills</h1>
+      <h2>Skills & Attributes</h2>
+      <p>
+        풀스택 웹개발에 대한 전반적인 개념이 있고 구체적으로 웹개발을 위한
+        준비가 되어 있습니다. 새로운 것을 배우는데 항상 관심이 있으면 망설이지
+        않고 실천하는 성경입니다. 사람들과 어우러져 일하는 것을 좋아하고
+        맡은일에 책임감이 강한 성격입니다.
+      </p>
+      <div class="skillset">
+        <div class="skillset_left">
+          <h3 class="skillset_title">Skills</h3>
+          <div class="skill">
+            <div class="skill_description">
+              <span>HTML</span>
+              <span>90%</span>
+            </div>
+            <div class="skil__bar">
+              <div class="skill__value"></div>
+            </div>
+          </div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>CSS</span>
+                <span>80%%</span>
+              </div>
+            </div>
+              <div class="skil__bar">
+                <div class="skill__value"></div>
+              </div>
+              <div class="skill">
+                <div class="skill_description">
+                  <span>JavaScript</span>
+                  <span>80%</span>
+                </div>
+                <div class="skil__bar">
+                  <div class="skill__value"></div>
+                </div>
+              </div>
+                <div class="skill">
+                  <div class="skill_description">
+                    <span>Spring</span>
+                    <span>80%</span>
+                  </div>
+                  <div class="skil__bar">
+                    <div class="skill__value"></div>
+                  </div>
+                </div>
+                  <div class="skill">
+                    <div class="skill_description">
+                      <span>Mybatis</span>
+                      <span>50%</span>
+                    </div>
+                    <div class="skil__bar">
+                      <div class="skill__value"></div>
+                    </div>
+                  </div>
+                    <div class="skill">
+                      <div class="skill_description">
+                        <span>SpringBoots</span>
+                        <span>0%</span>
+                      </div>
+                      <div class="skil__bar">
+                        <div class="skill__value"></div>
+                      </div>
+                    </div>
+                      <div class="skill">
+                        <div class="skill_description">
+                          <span>MyS</span>
+                          <span>50%</span>
+                        </div>
+                        <div class="skil__bar">
+                          <div class="skill__value"></div>
+                        </div>   
+                      </div>
+            </div>
+          </div>
+      
+        <div class="skillset_right">
+          <div class="tools">
+            <h3 class="skillset__title">Tools</h3>
+            <ul class="tiils__list">
+              <li><span>Eclips</span></li>
+              <li><span>Visual Studio Code</span></li>
+              <li><span>MySQL</span></li>
+              <li><span>Git</span></li>
+              <li><span>Github</span></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h3 class="skillset__title">Etc</h3>
+            <ul class="etc__list">
+              <li><span>무역영어 1급</span></li>
+              <li><span>ERP 물류 1급</span></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Work -->
     <section id="work"></section>
     <!-- Testimoials -->
