--- a/index.html
+++ b/index.html
@@ -204,7 +204,38 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="work"></section>
+    <section id="work">
+      <h1>My work</h1>
+      <h3>Projects</h3>
+      <div class="work__categories">
+        <button class="category__btn">All<span class="category__count">1</span></button>
+        <button class="category__btn">Front-end<span class="category__count">1</span></button>
+        <button class="category__btn">Back-end<span class="category__count">1</span></button>
+      </div>
+      <div class="works__projects">
+        <a href="" class="project" target="blank">
+          <img class="project__img" src="imgs/projects/boardProject.png" alt="">
+          <div class="project__description">
+            <h3>Board</h3>
+            <span>반응형 게시판 제작</span>
+          </div>
+        </a>
+        <a href="" class="project" target="blank">
+          <img class="project__img" src="imgs/projects/boardProject.png" alt="">
+          <div class="project__description">
+            <h3>Board</h3>
+            <span>반응형 게시판 제작</span>
+          </div>
+        </a>
+        <a href="" class="project" target="blank">
+          <img class="project__img" src="imgs/projects/boardProject.png" alt="">
+          <div class="project__description">
+            <h3>Board</h3>
+            <span>반응형 게시판 제작</span>
+          </div>
+        </a>
+      </div>
+    </section>
     <!-- Testimoials -->
     <section id="testimomilas"></section>
     <!-- Contact -->
