--- a/index.html
+++ b/index.html
@@ -236,9 +236,16 @@
         </a>
       </div>
     </section>
-    <!-- Testimoials -->
-    <section id="testimomilas"></section>
     <!-- Contact -->
-    <section id="contact"></section>
+    <section id="contact">
+      <h1 class="contact__title">CONTACT</h1>
+      <h2 class="contact__eamil">hchani95@gmial.com</h2>
+      <div class="contact__link">
+        <a href="" target="_blank">
+          <i class="fa-brands fa-github"></i>
+        </a>
+        <p class="contact__rights">2022 devChan -All rights reserved</p>
+      </div>
+    </section>
   </body>
 </html>
