--- a/index.html
+++ b/index.html
@@ -213,21 +213,21 @@
         <button class="category__btn">Back-end<span class="category__count">1</span></button>
       </div>
       <div class="works__projects">
-        <a href="" class="project" target="blank">
+        <a href="https://github.com/hchanhi/Board_Project" class="project" target="blank">
           <img class="project__img" src="imgs/projects/boardProject.png" alt="">
           <div class="project__description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
           </div>
         </a>
-        <a href="" class="project" target="blank">
+        <a href="https://github.com/hchanhi/Board_Project" class="project" target="blank">
           <img class="project__img" src="imgs/projects/boardProject.png" alt="">
           <div class="project__description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
           </div>
         </a>
-        <a href="" class="project" target="blank">
+        <a href="https://github.com/hchanhi/Board_Project" class="project" target="blank">
           <img class="project__img" src="imgs/projects/boardProject.png" alt="">
           <div class="project__description">
             <h3>Board</h3>
@@ -241,7 +241,7 @@
       <h1 class="contact__title">CONTACT</h1>
       <h2 class="contact__eamil">hchani95@gmial.com</h2>
       <div class="contact__link">
-        <a href="" target="_blank">
+        <a href="https://github.com/hchanhi" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
         <p class="contact__rights">2022 devChan -All rights reserved</p>
