--- a/index.html
+++ b/index.html
@@ -12,24 +12,21 @@
       src="https://kit.fontawesome.com/c7e7ea80ae.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
   <body>
     <!-- NavBar -->
-    <nav id="bar">
+    <nav id="navbar">
       <div class="navbar_logo">
         <img src="imgs/favicon.png" alt="icon" />
         <a href="#">CHANi</a>
       </div>
-      <ul class="nabar_menu">
-        <li class="navbar_menu_item">Home</li>
+      <ul class="navbar_menu">
+        <li class="navbar_menu_item active">Home</li>
         <li class="navbar_menu_item">About</li>
         <li class="navbar_menu_item">Skills</li>
         <li class="navbar_menu_item">My Work</li>
@@ -186,7 +183,8 @@
           <div class="tools">
             <h3 class="skillset__title">Tools</h3>
             <ul class="tiils__list">
-              <li><span>Eclips</span></li>
+              <li><span>Eclips</span></li>  
+              <li><span>STS</span></li>  
               <li><span>Visual Studio Code</span></li>
               <li><span>MySQL</span></li>
               <li><span>Git</span></li>
