--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <button class="home_contact">Contact Me</button>
     </section>
     <!-- About -->
-    <section id="about">
+    <section id="about" class="section">
       <h1>About Me</h1>
       <p>무역학과를 졸업하고 비전공 풀스택 개발자가 되기 위해 노력중입니다.</p>
       <div class="about_majors">
@@ -59,49 +59,53 @@
           <div class="major_icon">
             <i class="fa-brands fa-html5"></i>
           </div>
-          <div class="major_title">Front-end</div>
+          <h2 class="major_title">Front-end</h2>
           <div class="major_deccription">HTML, CSS, JavaScript</div>
         </div>
         <div class="major">
           <div class="major_icon">
             <i class="fa-solid fa-database"></i>
           </div>
-          <div class="major_title">Front-end</div>
+          <h2 class="major_title">Back-end</h2>
           <div class="major_deccription">
-            servlet, jsp, spring, mybatis, Mysql
+            Java, JavaScript, Spring, Spring-boot, Mybatis, MySQL
           </div>
         </div>
         <div class="major">
           <div class="major_icon">
             <i class="fa-brands fa-html5"></i>
           </div>
-          <div class="major_title">Front-end</div>
+          <h2 class="major_title">Front-end</h2>
           <div class="major_deccription">HTML, CSS, JavaScript</div>
         </div>
       </div>
       <div class="about__jobs">
-        <div class="jobs">
+        <div class="job">
           <img
             src="imgs/jobs/multicampus.png"
             alt="multicampus"
-            class="job__logo"
+            class="job_logo"
           />
-          <p class="job__name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
-          <p class="job__period">2021.12.20 ~ 2022.06.05</p>
+          <div class="job_description">
+          <p class="job_name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
+          <p class="job_period">2021.12.20 ~ 2022.06.05</p>
         </div>
-        <div class="jobs">
+        </div>
+        <div class="job">
           <img
             src="imgs/jobs/multicampus.png"
             alt="multicampus"
-            class="job__logo"
+            class="job_logo"
           />
-          <p class="job__name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
-          <p class="job__period">2021.12.20 ~ 2022.06.05</p>
+          <div class="job_description">
+          <p class="job_name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
+          <p class="job_period">2021.12.20 ~ 2022.06.05</p>
         </div>
+      </div>
       </div>
     </section>
     <!-- Skills -->
-    <section id="skills">
+    <section id="skills" class="section">
       <h1>Skills</h1>
       <h2>Skills & Attributes</h2>
       <p>
@@ -142,8 +146,8 @@
               </div>
                 <div class="skill">
                   <div class="skill_description">
-                    <span>Spring</span>
-                    <span>80%</span>
+                    <span>Mybatis</span>
+                    <span>50%</span>
                   </div>
                   <div class="skil__bar">
                     <div class="skill__value"></div>
@@ -151,8 +155,8 @@
                 </div>
                   <div class="skill">
                     <div class="skill_description">
-                      <span>Mybatis</span>
-                      <span>50%</span>
+                      <span>Spring</span>
+                      <span>70%</span>
                     </div>
                     <div class="skil__bar">
                       <div class="skill__value"></div>
@@ -160,8 +164,8 @@
                   </div>
                     <div class="skill">
                       <div class="skill_description">
-                        <span>SpringBoots</span>
-                        <span>0%</span>
+                        <span>Spring-boot</span>
+                        <span>60%</span>
                       </div>
                       <div class="skil__bar">
                         <div class="skill__value"></div>
@@ -169,8 +173,8 @@
                     </div>
                       <div class="skill">
                         <div class="skill_description">
-                          <span>MyS</span>
-                          <span>50%</span>
+                          <span>MySQL</span>
+                          <span>70%</span>
                         </div>
                         <div class="skil__bar">
                           <div class="skill__value"></div>
@@ -202,7 +206,7 @@
       </div>
     </section>
     <!-- Work -->
-    <section id="work">
+    <section id="work" class="section">
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
@@ -235,7 +239,7 @@
       </div>
     </section>
     <!-- Contact -->
-    <section id="contact">
+    <section id="contact" class="section">
       <h1 class="contact__title">CONTACT</h1>
       <h2 class="contact__eamil">hchani95@gmial.com</h2>
       <div class="contact__link">
