--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       src="https://kit.fontawesome.com/c7e7ea80ae.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js" defer></script>
   </head>
@@ -87,9 +90,11 @@
             class="job_logo"
           />
           <div class="job_description">
-          <p class="job_name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
-          <p class="job_period">2021.12.20 ~ 2022.06.05</p>
-        </div>
+            <p class="job_name">
+              멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
+            </p>
+            <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+          </div>
         </div>
         <div class="job">
           <img
@@ -98,10 +103,12 @@
             class="job_logo"
           />
           <div class="job_description">
-          <p class="job_name">멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정</p>
-          <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+            <p class="job_name">
+              멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
+            </p>
+            <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+          </div>
         </div>
-      </div>
       </div>
     </section>
     <!-- Skills -->
@@ -122,73 +129,72 @@
               <span>HTML</span>
               <span>90%</span>
             </div>
-            <div class="skil__bar">
-              <div class="skill__value"></div>
+            <div class="skill_bar">
+              <div class="skill_value" style="width: 90%"></div>
             </div>
           </div>
-            <div class="skill">
-              <div class="skill_description">
-                <span>CSS</span>
-                <span>80%%</span>
-              </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>CSS</span>
+              <span>80%</span>
             </div>
-              <div class="skil__bar">
-                <div class="skill__value"></div>
-              </div>
-              <div class="skill">
-                <div class="skill_description">
-                  <span>JavaScript</span>
-                  <span>80%</span>
-                </div>
-                <div class="skil__bar">
-                  <div class="skill__value"></div>
-                </div>
-              </div>
-                <div class="skill">
-                  <div class="skill_description">
-                    <span>Mybatis</span>
-                    <span>50%</span>
-                  </div>
-                  <div class="skil__bar">
-                    <div class="skill__value"></div>
-                  </div>
-                </div>
-                  <div class="skill">
-                    <div class="skill_description">
-                      <span>Spring</span>
-                      <span>70%</span>
-                    </div>
-                    <div class="skil__bar">
-                      <div class="skill__value"></div>
-                    </div>
-                  </div>
-                    <div class="skill">
-                      <div class="skill_description">
-                        <span>Spring-boot</span>
-                        <span>60%</span>
-                      </div>
-                      <div class="skil__bar">
-                        <div class="skill__value"></div>
-                      </div>
-                    </div>
-                      <div class="skill">
-                        <div class="skill_description">
-                          <span>MySQL</span>
-                          <span>70%</span>
-                        </div>
-                        <div class="skil__bar">
-                          <div class="skill__value"></div>
-                        </div>   
-                      </div>
+            <div class="skill_bar">
+              <div class="skill_value" style="width: 80%"></div>
             </div>
           </div>
-      
+          <div class="skill">
+            <div class="skill_description">
+              <span>JavaScript</span>
+              <span>80%</span>
+            </div>
+            <div class="skill_bar">
+              <div class="skill_value" style="width: 80%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>Mybatis</span>
+              <span>50%</span>
+            </div>
+            <div class="skill_bar">
+              <div class="skill_value" style="width: 50%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>Spring</span>
+              <span>70%</span>
+            </div>
+            <div class="skill_bar">
+              <div class="skill_value" style="width: 70%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>Spring-boot</span>
+              <span>70%</span>
+            </div>
+            <div class="skill_bar">
+              <div class="skill_value" style="width: 70%"></div>
+            </div>
+          </div>
+          <div class="skill">
+            <div class="skill_description">
+              <span>MySQL</span>
+              <span>70%</span>
+            </div>
+            <div class="skill_bar">
+              <div class="skill_value" style="width: 70%"></div>
+            </div>
+          </div>
+        </div>
+
         <div class="skillset_right">
           <div class="tools">
-            <h3 class="skillset__title">Tools</h3>
+            <h3 class="skillset_title">Tools</h3>
             <ul class="tiils__list">
-              <li><span>Eclips</span></li>  
-              <li><span>STS</span></li>  
+              <li><span>Eclips</span></li>
+              <li><span>STS</span></li>
               <li><span>Visual Studio Code</span></li>
               <li><span>MySQL</span></li>
               <li><span>Git</span></li>
@@ -196,7 +202,7 @@
             </ul>
           </div>
           <div class="etc">
-            <h3 class="skillset__title">Etc</h3>
+            <h3 class="skillset_title">Etc</h3>
             <ul class="etc__list">
               <li><span>무역영어 1급</span></li>
               <li><span>ERP 물류 1급</span></li>
@@ -210,27 +216,57 @@
       <h1>My work</h1>
       <h3>Projects</h3>
       <div class="work__categories">
-        <button class="category__btn">All<span class="category__count">1</span></button>
-        <button class="category__btn">Front-end<span class="category__count">1</span></button>
-        <button class="category__btn">Back-end<span class="category__count">1</span></button>
+        <button class="category__btn">
+          All<span class="category__count">1</span>
+        </button>
+        <button class="category__btn">
+          Front-end<span class="category__count">1</span>
+        </button>
+        <button class="category__btn">
+          Back-end<span class="category__count">1</span>
+        </button>
       </div>
       <div class="works__projects">
-        <a href="https://github.com/hchanhi/Board_Project" class="project" target="blank">
-          <img class="project__img" src="imgs/projects/boardProject.png" alt="">
+        <a
+          href="https://github.com/hchanhi/Board_Project"
+          class="project"
+          target="blank"
+        >
+          <img
+            class="project__img"
+            src="imgs/projects/boardProject.png"
+            alt=""
+          />
           <div class="project__description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
           </div>
         </a>
-        <a href="https://github.com/hchanhi/Board_Project" class="project" target="blank">
-          <img class="project__img" src="imgs/projects/boardProject.png" alt="">
+        <a
+          href="https://github.com/hchanhi/Board_Project"
+          class="project"
+          target="blank"
+        >
+          <img
+            class="project__img"
+            src="imgs/projects/boardProject.png"
+            alt=""
+          />
           <div class="project__description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
           </div>
         </a>
-        <a href="https://github.com/hchanhi/Board_Project" class="project" target="blank">
-          <img class="project__img" src="imgs/projects/boardProject.png" alt="">
+        <a
+          href="https://github.com/hchanhi/Board_Project"
+          class="project"
+          target="blank"
+        >
+          <img
+            class="project__img"
+            src="imgs/projects/boardProject.png"
+            alt=""
+          />
           <div class="project__description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
