--- a/index.html
+++ b/index.html
@@ -215,29 +215,29 @@
     <section id="work" class="section">
       <h1>My work</h1>
       <h3>Projects</h3>
-      <div class="work__categories">
-        <button class="category__btn">
-          All<span class="category__count">1</span>
+      <div class="work_categories">
+        <button class="category_btn active">
+          All<span class="category_count">1</span>
         </button>
-        <button class="category__btn">
-          Front-end<span class="category__count">1</span>
+        <button class="category_btn">
+          Personal-Project<span class="category_count">1</span>
         </button>
-        <button class="category__btn">
-          Back-end<span class="category__count">1</span>
+        <button class="category_btn">
+          Team-Project<span class="category_count">1</span>
         </button>
       </div>
-      <div class="works__projects">
+      <div class="works_projects">
         <a
           href="https://github.com/hchanhi/Board_Project"
           class="project"
           target="blank"
         >
           <img
-            class="project__img"
+            class="project_img"
             src="imgs/projects/boardProject.png"
             alt=""
           />
-          <div class="project__description">
+          <div class="project_description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
           </div>
@@ -248,11 +248,11 @@
           target="blank"
         >
           <img
-            class="project__img"
+            class="project_img"
             src="imgs/projects/boardProject.png"
             alt=""
           />
-          <div class="project__description">
+          <div class="project_description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
           </div>
@@ -263,11 +263,11 @@
           target="blank"
         >
           <img
-            class="project__img"
+            class="project_img"
             src="imgs/projects/boardProject.png"
             alt=""
           />
-          <div class="project__description">
+          <div class="project_description">
             <h3>Board</h3>
             <span>반응형 게시판 제작</span>
           </div>
@@ -276,13 +276,13 @@
     </section>
     <!-- Contact -->
     <section id="contact" class="section">
-      <h1 class="contact__title">CONTACT</h1>
-      <h2 class="contact__eamil">hchani95@gmial.com</h2>
-      <div class="contact__link">
+      <h1 class="contact_title">CONTACT</h1>
+      <h2 class="contact_eamil">hchani95@gmial.com</h2>
+      <div class="contact_link">
         <a href="https://github.com/hchanhi" target="_blank">
           <i class="fa-brands fa-github"></i>
         </a>
-        <p class="contact__rights">2022 devChan -All rights reserved</p>
+        <p class="contact_rights">2022 devChan -All rights reserved</p>
       </div>
     </section>
   </body>
