--- a/index.html
+++ b/index.html
@@ -55,223 +55,231 @@
     </section>
     <!-- About -->
     <section id="about" class="section">
-      <h1>About Me</h1>
-      <p>무역학과를 졸업하고 비전공 풀스택 개발자가 되기 위해 노력중입니다.</p>
-      <div class="about_majors">
-        <div class="major">
-          <div class="major_icon">
-            <i class="fa-brands fa-html5"></i>
+      <div class="section_container">
+        <h1>About Me</h1>
+        <p>
+          무역학과를 졸업하고 비전공 풀스택 개발자가 되기 위해 노력중입니다.
+        </p>
+        <div class="about_majors">
+          <div class="major">
+            <div class="major_icon">
+              <i class="fa-brands fa-html5"></i>
+            </div>
+            <h2 class="major_title">Front-end</h2>
+            <div class="major_deccription">HTML, CSS, JavaScript</div>
           </div>
-          <h2 class="major_title">Front-end</h2>
-          <div class="major_deccription">HTML, CSS, JavaScript</div>
-        </div>
-        <div class="major">
-          <div class="major_icon">
-            <i class="fa-solid fa-database"></i>
+          <div class="major">
+            <div class="major_icon">
+              <i class="fa-solid fa-database"></i>
+            </div>
+            <h2 class="major_title">Back-end</h2>
+            <div class="major_deccription">
+              Java, JavaScript, Spring, Spring-boot, Mybatis, MySQL
+            </div>
           </div>
-          <h2 class="major_title">Back-end</h2>
-          <div class="major_deccription">
-            Java, JavaScript, Spring, Spring-boot, Mybatis, MySQL
-          </div>
-        </div>
-        <div class="major">
-          <div class="major_icon">
-            <i class="fa-brands fa-html5"></i>
-          </div>
-          <h2 class="major_title">Front-end</h2>
-          <div class="major_deccription">HTML, CSS, JavaScript</div>
-        </div>
-      </div>
-      <div class="about__jobs">
-        <div class="job">
-          <img
-            src="imgs/jobs/multicampus.png"
-            alt="multicampus"
-            class="job_logo"
-          />
-          <div class="job_description">
-            <p class="job_name">
-              멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
-            </p>
-            <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+          <div class="major">
+            <div class="major_icon">
+              <i class="fa-brands fa-html5"></i>
+            </div>
+            <h2 class="major_title">Front-end</h2>
+            <div class="major_deccription">HTML, CSS, JavaScript</div>
           </div>
         </div>
-        <div class="job">
-          <img
-            src="imgs/jobs/multicampus.png"
-            alt="multicampus"
-            class="job_logo"
-          />
-          <div class="job_description">
-            <p class="job_name">
-              멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
-            </p>
-            <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+        <div class="about__jobs">
+          <div class="job">
+            <img
+              src="imgs/jobs/multicampus.png"
+              alt="multicampus"
+              class="job_logo"
+            />
+            <div class="job_description">
+              <p class="job_name">
+                멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
+              </p>
+              <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+            </div>
+          </div>
+          <div class="job">
+            <img
+              src="imgs/jobs/multicampus.png"
+              alt="multicampus"
+              class="job_logo"
+            />
+            <div class="job_description">
+              <p class="job_name">
+                멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
+              </p>
+              <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- Skills -->
     <section id="skills" class="section">
-      <h1>Skills</h1>
-      <h2>Skills & Attributes</h2>
-      <p>
-        풀스택 웹개발에 대한 전반적인 개념이 있고 구체적으로 웹개발을 위한
-        준비가 되어 있습니다. 새로운 것을 배우는데 항상 관심이 있으면 망설이지
-        않고 실천하는 성경입니다. 사람들과 어우러져 일하는 것을 좋아하고
-        맡은일에 책임감이 강한 성격입니다.
-      </p>
-      <div class="skillset">
-        <div class="skillset_left">
-          <h3 class="skillset_title">Skills</h3>
-          <div class="skill">
-            <div class="skill_description">
-              <span>HTML</span>
-              <span>90%</span>
+      <div class="section_container">
+        <h1>Skills</h1>
+        <h2>Skills & Attributes</h2>
+        <p>
+          풀스택 웹개발에 대한 전반적인 개념이 있고 구체적으로 웹개발을 위한
+          준비가 되어 있습니다. 새로운 것을 배우는데 항상 관심이 있으면 망설이지
+          않고 실천하는 성경입니다. 사람들과 어우러져 일하는 것을 좋아하고
+          맡은일에 책임감이 강한 성격입니다.
+        </p>
+        <div class="skillset">
+          <div class="skillset_left">
+            <h3 class="skillset_title">Skills</h3>
+            <div class="skill">
+              <div class="skill_description">
+                <span>HTML</span>
+                <span>90%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 90%"></div>
+              </div>
             </div>
-            <div class="skill_bar">
-              <div class="skill_value" style="width: 90%"></div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>CSS</span>
+                <span>80%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 80%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>JavaScript</span>
+                <span>80%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 80%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>Mybatis</span>
+                <span>50%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 50%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>Spring</span>
+                <span>70%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 70%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>Spring-boot</span>
+                <span>70%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 70%"></div>
+              </div>
+            </div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>MySQL</span>
+                <span>70%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value" style="width: 70%"></div>
+              </div>
             </div>
           </div>
-          <div class="skill">
-            <div class="skill_description">
-              <span>CSS</span>
-              <span>80%</span>
-            </div>
-            <div class="skill_bar">
-              <div class="skill_value" style="width: 80%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill_description">
-              <span>JavaScript</span>
-              <span>80%</span>
-            </div>
-            <div class="skill_bar">
-              <div class="skill_value" style="width: 80%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill_description">
-              <span>Mybatis</span>
-              <span>50%</span>
-            </div>
-            <div class="skill_bar">
-              <div class="skill_value" style="width: 50%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill_description">
-              <span>Spring</span>
-              <span>70%</span>
-            </div>
-            <div class="skill_bar">
-              <div class="skill_value" style="width: 70%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill_description">
-              <span>Spring-boot</span>
-              <span>70%</span>
-            </div>
-            <div class="skill_bar">
-              <div class="skill_value" style="width: 70%"></div>
-            </div>
-          </div>
-          <div class="skill">
-            <div class="skill_description">
-              <span>MySQL</span>
-              <span>70%</span>
-            </div>
-            <div class="skill_bar">
-              <div class="skill_value" style="width: 70%"></div>
-            </div>
-          </div>
-        </div>
 
-        <div class="skillset_right">
-          <div class="tools">
-            <h3 class="skillset_title">Tools</h3>
-            <ul class="tiils__list">
-              <li><span>Eclips</span></li>
-              <li><span>STS</span></li>
-              <li><span>Visual Studio Code</span></li>
-              <li><span>MySQL</span></li>
-              <li><span>Git</span></li>
-              <li><span>Github</span></li>
-            </ul>
-          </div>
-          <div class="etc">
-            <h3 class="skillset_title">Etc</h3>
-            <ul class="etc__list">
-              <li><span>무역영어 1급</span></li>
-              <li><span>ERP 물류 1급</span></li>
-            </ul>
+          <div class="skillset_right">
+            <div class="tools">
+              <h3 class="skillset_title">Tools</h3>
+              <ul class="tiils__list">
+                <li><span>Eclips</span></li>
+                <li><span>STS</span></li>
+                <li><span>Visual Studio Code</span></li>
+                <li><span>MySQL</span></li>
+                <li><span>Git</span></li>
+                <li><span>Github</span></li>
+              </ul>
+            </div>
+            <div class="etc">
+              <h3 class="skillset_title">Etc</h3>
+              <ul class="etc__list">
+                <li><span>무역영어 1급</span></li>
+                <li><span>ERP 물류 1급</span></li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <!-- Work -->
     <section id="work" class="section">
-      <h1>My work</h1>
-      <h3>Projects</h3>
-      <div class="work_categories">
-        <button class="category_btn active">
-          All<span class="category_count">1</span>
-        </button>
-        <button class="category_btn">
-          Personal-Project<span class="category_count">1</span>
-        </button>
-        <button class="category_btn">
-          Team-Project<span class="category_count">1</span>
-        </button>
-      </div>
-      <div class="works_projects">
-        <a
-          href="https://github.com/hchanhi/Board_Project"
-          class="project"
-          target="blank"
-        >
-          <img
-            class="project_img"
-            src="imgs/projects/boardProject.png"
-            alt=""
-          />
-          <div class="project_description">
-            <h3>Board</h3>
-            <span>반응형 게시판 제작</span>
-          </div>
-        </a>
-        <a
-          href="https://github.com/hchanhi/Board_Project"
-          class="project"
-          target="blank"
-        >
-          <img
-            class="project_img"
-            src="imgs/projects/boardProject.png"
-            alt=""
-          />
-          <div class="project_description">
-            <h3>Board</h3>
-            <span>반응형 게시판 제작</span>
-          </div>
-        </a>
-        <a
-          href="https://github.com/hchanhi/Board_Project"
-          class="project"
-          target="blank"
-        >
-          <img
-            class="project_img"
-            src="imgs/projects/boardProject.png"
-            alt=""
-          />
-          <div class="project_description">
-            <h3>Board</h3>
-            <span>반응형 게시판 제작</span>
-          </div>
-        </a>
+      <div class="section_container">
+        <h1>My work</h1>
+        <h3>Projects</h3>
+        <div class="work_categories">
+          <button class="category_btn active">
+            All<span class="category_count">1</span>
+          </button>
+          <button class="category_btn">
+            Personal-Project<span class="category_count">1</span>
+          </button>
+          <button class="category_btn">
+            Team-Project<span class="category_count">1</span>
+          </button>
+        </div>
+        <div class="works_projects">
+          <a
+            href="https://github.com/hchanhi/Board_Project"
+            class="project"
+            target="blank"
+          >
+            <img
+              class="project_img"
+              src="imgs/projects/boardProject.png"
+              alt=""
+            />
+            <div class="project_description">
+              <h3>Board</h3>
+              <span>반응형 게시판 제작</span>
+            </div>
+          </a>
+          <a
+            href="https://github.com/hchanhi/Board_Project"
+            class="project"
+            target="blank"
+          >
+            <img
+              class="project_img"
+              src="imgs/projects/boardProject.png"
+              alt=""
+            />
+            <div class="project_description">
+              <h3>Board</h3>
+              <span>반응형 게시판 제작</span>
+            </div>
+          </a>
+          <a
+            href="https://github.com/hchanhi/Board_Project"
+            class="project"
+            target="blank"
+          >
+            <img
+              class="project_img"
+              src="imgs/projects/boardProject.png"
+              alt=""
+            />
+            <div class="project_description">
+              <h3>Board</h3>
+              <span>반응형 게시판 제작</span>
+            </div>
+          </a>
+        </div>
       </div>
     </section>
     <!-- Contact -->
