--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
         <img src="imgs/favicon.png" alt="icon" />
         <a href="#">CHANi</a>
       </div>
-      <ul class="navbar_menu">
-        <li class="navbar_menu_item active">Home</li>
-        <li class="navbar_menu_item">About</li>
-        <li class="navbar_menu_item">Skills</li>
-        <li class="navbar_menu_item">My Work</li>
-        <li class="navbar_menu_item">Testimoials</li>
-        <li class="navbar_menu_item">Contact</li>
-      </ul>
+      <div class="navbar_menu">
+        <ul class="navbar_menu">
+          <li class="navbar_menu_item active">Home</li>
+          <li class="navbar_menu_item">About</li>
+          <li class="navbar_menu_item">Skills</li>
+          <li class="navbar_menu_item">My Work</li>
+          <li class="navbar_menu_item">Testimoials</li>
+          <li class="navbar_menu_item">Contact</li>
+        </ul>
+      </div>
+
+      <button class="navbar_toggle_btn">
+        <i class="fas fa-bars"></i>
+      </button>
     </nav>
     <!-- Home -->
     <section id="home">
