--- a/index.html
+++ b/index.html
@@ -45,19 +45,21 @@
     </nav>
     <!-- Home -->
     <section id="home">
-      <img
-        src="imgs/profile.png"
-        alt="Chan's profile photo"
-        class="home_avatar"
-      />
-      <h1 class="home_title">
-        Hello,<br />
-        I'm dev
-      </h1>
-      <h2 class="home_descripntion">
-        무역 학과에서 비전공 풀스택 개발자를 위한 여정
-      </h2>
-      <button class="home_contact">Contact Me</button>
+      <div class="home_container">
+        <img
+          src="imgs/profile.png"
+          alt="Chan's profile photo"
+          class="home_avatar"
+        />
+        <h1 class="home_title">
+          Hello,<br />
+          I'm dev
+        </h1>
+        <h2 class="home_descripntion">
+          무역 학과에서 비전공 풀스택 개발자를 위한 여정
+        </h2>
+        <button class="home_contact">Contact Me</button>
+      </div>
     </section>
     <!-- About -->
     <section id="about" class="section">
