맨 위로 이동 함수 작성

--- a/index.html
+++ b/index.html
@@ -301,5 +301,10 @@
         <p class="contact_rights">2022 devChan -All rights reserved</p>
       </div>
     </section>
+
+    <!-- Arrow Up -->
+    <button class="arrow_up">
+      <i class="fas fa-arrow-up"></i>
+    </button>
   </body>
 </html>
