--- a/index.html
+++ b/index.html
@@ -231,13 +231,13 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work_categories">
-          <button class="category_btn active">
+          <button class="category_btn active" data-filter="*">
             All<span class="category_count">1</span>
           </button>
-          <button class="category_btn">
+          <button class="category_btn" data-filter="Personal-Project">
             Personal-Project<span class="category_count">1</span>
           </button>
-          <button class="category_btn">
+          <button class="category_btn" data-filter="Team-Project">
             Team-Project<span class="category_count">1</span>
           </button>
         </div>
@@ -246,6 +246,7 @@
             href="https://github.com/hchanhi/Board_Project"
             class="project"
             target="blank"
+            data-type="Personal-Project"
           >
             <img
               class="project_img"
@@ -261,6 +262,7 @@
             href="https://github.com/hchanhi/Board_Project"
             class="project"
             target="blank"
+            data-type="Team-Project"
           >
             <img
               class="project_img"
@@ -276,6 +278,7 @@
             href="https://github.com/hchanhi/Board_Project"
             class="project"
             target="blank"
+            data-type="Team-Project"
           >
             <img
               class="project_img"
