--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#">CHANi</a>
       </div>
       <div class="navbar_menu">
-        <ul class="navbar_menu">
+        <ul class="navbar_menu1">
           <li class="navbar_menu_item active" data-link="#home">Home</li>
           <li class="navbar_menu_item" data-link="#about">About</li>
           <li class="navbar_menu_item" data-link="#skills">Skills</li>
@@ -231,7 +231,7 @@
         <h1>My work</h1>
         <h3>Projects</h3>
         <div class="work_categories">
-          <button class="category_btn active" data-filter="*">
+          <button class="category_btn selected" data-filter="*">
             All<span class="category_count">1</span>
           </button>
           <button class="category_btn" data-filter="Personal-Project">
