--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <li class="navbar_menu_item active" data-link="#home">Home</li>
           <li class="navbar_menu_item" data-link="#about">About</li>
           <li class="navbar_menu_item" data-link="#skills">Skills</li>
-          <li class="navbar_menu_item" data-link="#work">My Work</li>
+          <li class="navbar_menu_item" data-link="#work">Work</li>
           <!-- <li class="navbar_menu_item" data-link="#home">Testimoials</li> -->
           <li class="navbar_menu_item" data-link="#contact">Contact</li>
         </ul>
@@ -56,7 +56,7 @@
           I'm dev
         </h1>
         <h2 class="home_descripntion">
-          무역 학과에서 비전공 풀스택 개발자를 위한 여정
+          무역학과 졸업생의 비전공 풀스택 개발자를 위한 여정
         </h2>
         <button class="home_contact">Contact Me</button>
       </div>
@@ -67,6 +67,10 @@
         <h1>About Me</h1>
         <p>
           무역학과를 졸업하고 비전공 풀스택 개발자가 되기 위해 노력중입니다.
+          새로운 것을 배우는 것에 항상 즐거움을 느끼고 <br />
+          망설이지 않고 실천하는 성경입니다.<br />
+          사람들과 어우러져 일하는 것을 좋아하고 <br />
+          맡은일에 책임감이 강한 성격입니다.
         </p>
         <div class="about_majors">
           <div class="major">
@@ -129,10 +133,9 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          풀스택 웹개발에 대한 전반적인 개념이 있고 구체적으로 웹개발을 위한
-          준비가 되어 있습니다. 새로운 것을 배우는데 항상 관심이 있으면 망설이지
-          않고 실천하는 성경입니다. 사람들과 어우러져 일하는 것을 좋아하고
-          맡은일에 책임감이 강한 성격입니다.
+          풀스택 웹개발에 대한 전반적인 개념이 구축되어 있고 <br />
+          구체적인 웹개발을 위한 준비가 되어 있습니다. <br />
+          배우는 것에 망설이지 않고 빠르게 습득할 수 있습니다.
         </p>
         <div class="skillset">
           <div class="skillset_left">
