--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <a href="#">CHANi</a>
       </div>
       <div class="navbar_menu">
-        <ul class="navbar_menu1">
+        <ul class="navbar_menu">
           <li class="navbar_menu_item active" data-link="#home">Home</li>
           <li class="navbar_menu_item" data-link="#about">About</li>
           <li class="navbar_menu_item" data-link="#skills">Skills</li>
