--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <img src="imgs/favicon.png" alt="icon" />
         <a href="#">CHANi</a>
       </div>
-      <div class="navbar_menu">
+      <div>
         <ul class="navbar_menu">
           <li class="navbar_menu_item active" data-link="#home">Home</li>
           <li class="navbar_menu_item" data-link="#about">About</li>
