--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
               Java, JavaScript, Spring, Spring-boot, Mybatis, MySQL
             </div>
           </div>
-          <div class="major">
+          <!-- <div class="major">
             <div class="major_icon">
               <i class="fa-brands fa-html5"></i>
             </div>
             <h2 class="major_title">Front-end</h2>
             <div class="major_deccription">HTML, CSS, JavaScript</div>
           </div>
-        </div>
+        </div> -->
         <div class="about__jobs">
           <div class="job">
             <img
@@ -109,7 +109,7 @@
               <p class="job_period">2021.12.20 ~ 2022.06.05</p>
             </div>
           </div>
-          <div class="job">
+          <!-- <div class="job">
             <img
               src="imgs/jobs/multicampus.png"
               alt="multicampus"
@@ -121,7 +121,7 @@
               </p>
               <p class="job_period">2021.12.20 ~ 2022.06.05</p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
