--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </div>
         <div class="works_projects">
           <a
-            href="https://github.com/hchanhi/Board_Project"
+            href="https://github.com/hchanhi/BoardProject-backend"
             class="project"
             target="blank"
             data-type="Personal-Project"
@@ -256,39 +256,39 @@
             />
             <div class="project_description">
               <h3>Board</h3>
-              <span>반응형 게시판 제작</span>
+              <span>반응형 게시판</span>
             </div>
           </a>
           <a
-            href="https://github.com/hchanhi/Board_Project"
+            href="https://github.com/hchanhi/Am2zing_MOMO_Project"
             class="project"
             target="blank"
             data-type="Team-Project"
           >
             <img
               class="project_img"
-              src="imgs/projects/boardProject.png"
+              src="imgs/projects/MOMO_Project.png"
               alt=""
             />
             <div class="project_description">
-              <h3>Board</h3>
-              <span>반응형 게시판 제작</span>
+              <h3>MOMO</h3>
+              <span>MBTI 기반 장소 공유 커뮤니티</span>
             </div>
           </a>
           <a
-            href="https://github.com/hchanhi/Board_Project"
+            href="https://github.com/hchanhi/Portfolio-Project"
             class="project"
             target="blank"
             data-type="Team-Project"
           >
             <img
               class="project_img"
-              src="imgs/projects/boardProject.png"
+              src="imgs/projects/portfolio.png"
               alt=""
             />
             <div class="project_description">
-              <h3>Board</h3>
-              <span>반응형 게시판 제작</span>
+              <h3>Portfolio</h3>
+              <span>포트폴리오 사이트</span>
             </div>
           </a>
         </div>
