--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <!-- Contact -->
     <section id="contact" class="section">
       <h1 class="contact_title">CONTACT</h1>
-      <h2 class="contact_eamil">hchani95@gmial.com</h2>
+      <h2 class="contact_eamil">hchani95@gmail.com</h2>
       <div class="contact_link">
         <a href="https://github.com/hchanhi" target="_blank">
           <i class="fa-brands fa-github"></i>
