--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             href="https://github.com/hchanhi/Portfolio-Project"
             class="project"
             target="blank"
-            data-type="Team-Project"
+            data-type="Personal-Project"
           >
             <img
               class="project_img"
