--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             </div>
             <h2 class="major_title">Front-end</h2>
             <div class="major_deccription">HTML, CSS, JavaScript</div>
-          </div>
-        </div> -->
+          </div> -->
+        </div>
         <div class="about__jobs">
           <div class="job">
             <img
@@ -281,11 +281,7 @@
             target="blank"
             data-type="Personal-Project"
           >
-            <img
-              class="project_img"
-              src="imgs/projects/portfolio.png"
-              alt=""
-            />
+            <img class="project_img" src="imgs/projects/portfolio.png" alt="" />
             <div class="project_description">
               <h3>Portfolio</h3>
               <span>포트폴리오 사이트</span>
