--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
               Java, JavaScript, Spring, Spring-boot, Mybatis, MySQL
             </div>
           </div>
-          <!-- <div class="major">
+          <div class="major">
             <div class="major_icon">
-              <i class="fa-brands fa-html5"></i>
+              <i class="fas fa-code-branch"></i>
             </div>
-            <h2 class="major_title">Front-end</h2>
-            <div class="major_deccription">HTML, CSS, JavaScript</div>
-          </div> -->
+            <h2 class="major_title">SCM</h2>
+            <div class="major_deccription">Github</div>
+          </div>
         </div>
         <div class="about__jobs">
           <div class="job">
