이미지 경로 수정

--- a/index.html
+++ b/index.html
@@ -111,25 +111,25 @@
           배우는 것에 망설이지 않고 빠르게 습득할 수 있습니다.
         </p>
         <div class="about_majors">
-          
+
           <div class="major">
             <h2 class="major_title">Front-end</h2>
             <div class="major_img_front">
-              <img src="/imgs/front.png">
+              <img src="imgs/front.png">
             </div>
           </div>
 
           <div class="major">
             <h2 class="major_title">Back-end</h2>
             <div class="major_img_back">
-              <img src="/imgs/back.png">
+              <img src="imgs/back.png">
             </div>
           </div>
 
           <div class="major">
             <h2 class="major_title">Version Control</h2>
             <div class="major_img_version">
-              <img src="/imgs/version-control.png">
+              <img src="imgs/version-control.png">
             </div>
             
               <h2 class="major_title">Certificate</h2>
