반응형 css 수정

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <section id="about" class="section">
       <div class="section_container">
         <h1>About Me</h1>
+        <hr>
         <p>
           <h2>한찬희 <br /></h2>
           
@@ -79,7 +80,8 @@
             />
             <div class="job_description">
               <p class="job_name">
-                멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
+                멀티캠퍼스 <br>
+                지능형 웹서비스 풀스택 개발자 과정
               </p>
               <p class="job_period">2021.12.20 ~ 2022.06.05</p>
             </div>
@@ -108,7 +110,7 @@
         <p>
           풀스택 웹개발에 대한 전반적인 개념이 구축되어 있고 <br />
           구체적인 웹개발을 위한 준비가 되어 있습니다. <br />
-          배우는 것에 망설이지 않고 빠르게 습득할 수 있습니다.
+          배우는 것을 망설이지 않고 빠르게 습득합니다.
         </p>
         <div class="about_majors">
 
@@ -135,7 +137,7 @@
               <h2 class="major_title">Certificate</h2>
               <div class="major_img_certificate">
                <p>
-                무역영어 1급 
+                무역영어 1급 /  
                 ERP 물류 관리사 1급
                </p>
                 <img src="">
