--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          풀스택 웹개발에 대한 전반적인 개념이 구축되어 있고 <br />
+          풀스택 웹개발에 대한 전반적인 개념을 구축하고 <br />
           구체적인 웹개발을 위한 준비가 되어 있습니다. <br />
           배우는 것을 망설이지 않고 빠르게 습득합니다.
         </p>
