--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>
           <h2>한찬희 <br /></h2>
           
-          새로운 것을 배우는 것에 항상 즐거움을 느끼고 <br />
+          새로운 것을 배우는데 항상 즐거움을 느끼고 <br />
           망설이지 않고 실천하는 성격입니다.<br />
           사람들과 어울려 일하는 것을 좋아하고 <br />
           맡은일에 책임감이 강한 성격입니다.
