--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
         <h3>Projects</h3>
         <div class="work_categories">
           <button class="category_btn selected" data-filter="*">
-            All<span class="category_count">3</span>
+            All<span class="category_count">1</span>
           </button>
           <button class="category_btn" data-filter="Personal-Project">
-            Personal-Project<span class="category_count">2</span>
+            Personal-Project<span class="category_count">1</span>
           </button>
           <button class="category_btn" data-filter="Team-Project">
-            Team-Project<span class="category_count">1</span>
+            Team-Project<span class="category_count">2</span>
           </button>
         </div>
         <div class="works_projects">
@@ -208,6 +208,18 @@
               <span>포트폴리오 사이트</span>
             </div>
           </a>
+          <a
+          href="https://github.com/hchanhi/Am2zing_GodGong_Project"
+          class="project"
+          target="blank"
+          data-type="Team-Project"
+        >
+          <img class="project_img" src="imgs/projects/godgongProject.png" alt="" />
+          <div class="project_description">
+            <h3>GodGong Project</h3>
+            <span>실시간 공부 인증 플랫폼</span>
+          </div>
+        </a>
         </div>
       </div>
     </section>
