[modify] 페이지 수정 진행중

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           Hello,<br />
           I'm dev
         </h1>
-        <h2 class="home_descripntion">무역학과 졸업 비전공 풀스택 개발자</h2>
+        <h2 class="home_descripntion">안녕하세요 웹 개발자 한찬희 입니다.</h2>
         <button class="home_contact">Contact Me</button>
       </div>
     </section>
@@ -66,7 +66,7 @@
           <h2>한찬희 <br /></h2>
           
           새로운 것을 배우는데 항상 즐거움을 느끼고 <br />
-          망설이지 않고 실천하는 성격입니다.<br />
+          망설이지 않고 실천하는 것이 저의 장점입니다. <br />
           사람들과 어울려 일하는 것을 좋아하고 <br />
           맡은일에 책임감이 강한 성격입니다.
         </p>
@@ -108,9 +108,9 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          풀스택 웹개발에 대한 전반적인 개념을 구축하고 <br />
-          구체적인 웹개발을 위한 준비가 되어 있습니다. <br />
-          배우는 것을 망설이지 않고 빠르게 습득합니다.
+          전반적으로 백엔드에 집중한 프로젝트를 진행했지만<br />
+          프론트엔드와 협업하여 개발할 수 있고 <br />
+          라이브러리를 사용하지 않는 풀스택 개발이 가능합니다.
         </p>
         <div class="about_majors">
 
@@ -164,7 +164,8 @@
           </button>
         </div>
         <div class="works_projects">
-          <a
+          <div class="major">
+            <a
             href="https://github.com/hchanhi/BoardProject-backend"
             class="project"
             target="blank"
@@ -180,6 +181,7 @@
               <span>반응형 게시판</span>
             </div>
           </a>
+          </div>
           <a
             href="https://github.com/hchanhi/Am2zing_MOMO_Project"
             class="project"
