20230613 커리어 업로드

--- a/index.html
+++ b/index.html
@@ -86,15 +86,17 @@
               <p class="job_period">2021.12.20 ~ 2022.06.05</p>
             </div>
           </div>
-          <!-- <div class="job">
+            <div class="job">
             <img
-              src="imgs/jobs/multicampus.png"
-              alt="multicampus"
+              src="imgs/jobs/inzent.png"
+              alt="inzent"
               class="job_logo"
             />
             <div class="job_description">
               <p class="job_name">
-                멀티캠퍼스 지능형 웹서비스 풀스택 개발자 과정
+                APIM 사업팀 매니저
+                  -Java, Spring framework 기반 솔루션 개발
+                  -Linux, WAS, WebServer 기반 솔루션 구축
               </p>
               <p class="job_period">2021.12.20 ~ 2022.06.05</p>
             </div>
@@ -108,9 +110,9 @@
         <h1>Skills</h1>
         <h2>Skills & Attributes</h2>
         <p>
-          전반적으로 백엔드에 집중한 프로젝트를 진행했지만<br />
-          프론트엔드와 협업하여 개발할 수 있고 <br />
-          라이브러리를 사용하지 않는 풀스택 개발이 가능합니다.
+          백엔드 개발자를 지향합니다.<br />
+          스프링 프레임워크를 사용한 개발이 가능하며 <br />
+          Linux 기반 서버에 대한 이해도가 있습니다.
         </p>
         <div class="about_majors">
 
