커리어 업데이트 수정

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             />
             <div class="job_description">
               <p class="job_name">
-                APIM 사업팀 매니저
-                  -Java, Spring framework 기반 솔루션 개발
-                  -Linux, WAS, WebServer 기반 솔루션 구축
+                APIM 사업팀 매니저 <br>
+                  -Java, Spring framework 기반 솔루션 개발 <br>
+                  -Linux, WAS, WebServer 기반 솔루션 구축 <br>
               </p>
-              <p class="job_period">2021.12.20 ~ 2022.06.05</p>
+              <p class="job_period">2022.08.08 ~ </p>
             </div>
           </div> -->
         </div>
