--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </p>
               <p class="job_period">2022.08.08 ~ </p>
             </div>
-          </div> -->
+          </div> 
         </div>
       </div>
     </section>
