--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         />
         <h1 class="home_title">
           Hello,<br />
-          I'm dev
+          I'm Technical Support Engineer
         </h1>
-        <h2 class="home_descripntion">안녕하세요 웹 개발자 한찬희 입니다.</h2>
+        <h2 class="home_descripntion">안녕하세요. 한찬희 입니다.</h2>
         <button class="home_contact">Contact Me</button>
       </div>
     </section>
@@ -95,12 +95,33 @@
             <div class="job_description">
               <p class="job_name">
                 APIM 사업팀 매니저 <br>
-                  -Java, Spring framework 기반 솔루션 개발 <br>
-                  -Linux, WAS, WebServer 기반 솔루션 구축 <br>
+                <br>
+                  - Java, Spring framework 기반 솔루션 개발 <br>
+                  <br>
+                  - Linux, WAS, WebServer 기반 솔루션 구축 <br>
               </p>
-              <p class="job_period">2022.08.08 ~ </p>
+              <p class="job_period">2022.08 ~ 2024.01</p>
             </div>
           </div> 
+          <div class="job">
+            <img
+              src="imgs/jobs/portone.png"
+              alt="portone"
+              class="job_logo"
+            />
+            <div class="job_description">
+              <p class="job_name">
+                Technical Support Engineer<br>
+                <br>
+                솔루션 및 서비스 제공 업체에서 Technical Support Engineer로 근무하며 기술 지원과 운영 업무를 담당했습니다.<br>
+                <br>
+                고객의 문의와 이슈를 신속히 파악하고, 내부 개발자들과의 협업을 통해 문제를 해결하고 개선 사항을 도출하여 서비스 안정화에 기여했습니다.<br>
+                <br>
+                항상 고객 만족도를 최우선으로 생각하며, 최상의 지원을 제공하기 위해 노력하고 있습니다.<br>
+              </p>
+              <p class="job_period">2024.02 ~ 2024.09</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
